# uba-analyzer

./: .env.example  .gitignore  README.md  alert_saver.py  attacker_level_classifier.py  baseline_store.py  es_writer.py  event_aggregator.py  factor_engine.py  integration_test.py  ip_aggregator.py  jwt_parser.py  llm_analyzer.py  log_fetcher.py  main.py  pipeline.py  requirements.txt  risk_scorer.py  rule_engine.py  token_violation.py  user_profile.py
infra/: DEPLOY.md
infra/es/: es-verify.sh  load-sample-data.py  uba-alerts-mapping-add.json
infra/es-mappings/: uba-alerts.json  uba-events.json  uba-intelligence.json  uba-risk-scores.json
infra/ip-classification/: asn-map.yaml
infra/kibana/: BUILD_GUIDE.md  gen-dashboard.py  uba-dashboard.ndjson
llm-agent/: config.py  grounding.py  mcp_probe.py  mcp_router.py  mcp_router_test.py  orchestrator.py  phase3a_poller.py  requirements.txt  risk_doc_adapter.py  sample_alert_3a.json  slack_notifier.py  slack_smoke_test.py  throttle.py  tools.py
mcp/es-mcp/: .env.example  mint-es-key.sh  pyproject.toml  server.py
prompts/: phase_3a.py  phase_3b.py
