[project]
name = "zeti-es-mcp"
version = "0.1.0"
description = "ZETI UBA — Elasticsearch MCP server (stdio)"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    # Pinned <9: the ZETI ELK cluster is Elasticsearch 8.19; a 9.x client
    # sends an incompatible media-type header and gets HTTP 400.
    "elasticsearch>=8.13.0,<9",
]

[project.scripts]
zeti-es-mcp = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]
